--- a/hw19/style.css
+++ b/hw19/style.css
@@ -1,90 +1,85 @@
+/* task 1 */
+
 .card {
     max-width: 800px;
 }
 
+.country {
+  font-size: 64px;
+  font-weight: 700;
+}
+
+.capital {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.currency {
+  font-weight: 700;
+}
+
+.imgFlag {
+  max-width: 800px;
+}
 
 
+/* task 2 */
+
+.form_cont, .card_character {
+  max-width: 500px;
+  margin: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+  border: 1px solid gray;
+  box-shadow: 
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+  
+}
+
+.form_input {
+  width: 200px;
+  height: 25px;
+  margin-right: 10px;
+  border-radius: 5px;
+}
 
 
-.lds-default {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-default div {
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    background: rgb(241, 8, 8);
-    border-radius: 50%;
-    animation: lds-default 1.2s linear infinite;
-  }
-  .lds-default div:nth-child(1) {
-    animation-delay: 0s;
-    top: 37px;
-    left: 66px;
-  }
-  .lds-default div:nth-child(2) {
-    animation-delay: -0.1s;
-    top: 22px;
-    left: 62px;
-  }
-  .lds-default div:nth-child(3) {
-    animation-delay: -0.2s;
-    top: 11px;
-    left: 52px;
-  }
-  .lds-default div:nth-child(4) {
-    animation-delay: -0.3s;
-    top: 7px;
-    left: 37px;
-  }
-  .lds-default div:nth-child(5) {
-    animation-delay: -0.4s;
-    top: 11px;
-    left: 22px;
-  }
-  .lds-default div:nth-child(6) {
-    animation-delay: -0.5s;
-    top: 22px;
-    left: 11px;
-  }
-  .lds-default div:nth-child(7) {
-    animation-delay: -0.6s;
-    top: 37px;
-    left: 7px;
-  }
-  .lds-default div:nth-child(8) {
-    animation-delay: -0.7s;
-    top: 52px;
-    left: 11px;
-  }
-  .lds-default div:nth-child(9) {
-    animation-delay: -0.8s;
-    top: 62px;
-    left: 22px;
-  }
-  .lds-default div:nth-child(10) {
-    animation-delay: -0.9s;
-    top: 66px;
-    left: 37px;
-  }
-  .lds-default div:nth-child(11) {
-    animation-delay: -1s;
-    top: 62px;
-    left: 52px;
-  }
-  .lds-default div:nth-child(12) {
-    animation-delay: -1.1s;
-    top: 52px;
-    left: 62px;
-  }
-  @keyframes lds-default {
-    0%, 20%, 80%, 100% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.5);
-    }
-  }
+.name_char {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.button {
+  width: 200px;
+  height: 30px;
+  border-radius: 10px;
+  border-color: rgb(228, 228, 243);
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  background-color: rgb(228, 228, 243);
+
+  font-size: 16px;
+  font-weight: 700;
+  color: rgb(19, 18, 18);
+}
+
+.button_char {
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+  border-color: rgb(136, 136, 243);
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  background-color: rgb(136, 136, 243);
+
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+}
+
+.film_text {
+  font-size: 16px;
+  font-weight: 700;
+}
+
