--- a/hw21/style.css
+++ b/hw21/style.css
@@ -1,4 +1,11 @@
-.form_cont {
+.container {
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+}
+
+
+.form_cont, .card_cont {
     max-width: 600px;
     margin: 20px;
     padding: 20px;
@@ -29,11 +36,7 @@
     color: rgb(19, 18, 18);
 
   }
-/*   
-  .name_char {
-    font-size: 20px;
-    font-weight: 700;
-  } */
+
   
   .button {
     width: 100px;
@@ -43,10 +46,90 @@
     box-sizing: border-box;
     margin-bottom: 10px;
     background-color: rgb(228, 228, 243);
+    cursor: pointer;
   
     font-size: 16px;
     font-weight: 700;
     color: rgb(19, 18, 18);
   }
+
+  .card_cont {
+    position: relative;
+    max-width: 300px;
+  }
+
+  .close {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    right: 10px;
+    top: 5px;
+    cursor: pointer;
+    border: none;
+    background-color: white;
+
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(19, 18, 18);
+
+    
+  }
   
-  
+  /* preloader */
+
+  .lds-ellipsis {
+    display: none;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ellipsis div {
+    position: fixed;
+    top: 50px;
+    left: 500px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: rgb(163, 131, 131);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 508px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 508px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 532px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 556px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
