--- a/hw19/style.css
+++ b/hw19/style.css
@@ -1,28 +1,3 @@
-/* task 1 */
-
-.card {
-    max-width: 800px;
-}
-
-.country {
-  font-size: 64px;
-  font-weight: 700;
-}
-
-.capital {
-  font-size: 40px;
-  font-weight: 700;
-}
-
-.currency {
-  font-weight: 700;
-}
-
-.imgFlag {
-  max-width: 800px;
-}
-
-
 /* task 2 */
 
 .form_cont, .card_character {
@@ -82,4 +57,44 @@
   font-size: 16px;
   font-weight: 700;
 }
+
+/* preloader */
+
+.lds-facebook {
+  display: none;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 248px;
+  width: 16px;
+  background: rgb(131, 233, 148);
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 248px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 272px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 296px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
+}
+
 
